# beta_bot

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: main.rs
src/commands/: create_commands.rs  mod.rs  receive.rs  test.rs
src/commands/music/: insert.rs  join.rs  leave.rs  mod.rs  pause.rs  play.rs  play_lavalink.rs  queue.rs  remove.rs  repeat.rs  resume.rs  search.rs  shuffle.rs  skip.rs  skip_lavalink.rs  stop.rs
src/commands/utils/: capstone.rs  mod.rs  nano_chat.rs
src/handlers/: track_end.rs
src/lavalink/: application.yml
src/models/: data.rs
src/util/: alias.rs  capstone.rs  config.rs  lavalink.rs  lavalink_player.rs  mod.rs  music_ui.rs  path.rs  play.rs  player.rs  playlist.rs  queue.rs  repeat.rs  track.rs  types.rs  ytdlp.rs
