[package]
name = "beta_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.148"
serde = "1.0.219"
futures = "0.3"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
log = "0.4.29"
once_cell = "1.21.3"
toml = "0.9.2"
chrono = "0.4.41"
anyhow = "1.0.98"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rand = "0.10.0"
url = "2.5.4"
hound = "3.5.1"
encoding_rs = "0.8.35"
kakasi = "0.1.0"
capstone = "0.14.0"

[dependencies.poise]
version = "0.6.1"
features = ["collector"]

[dependencies.songbird]
version = "0.5.0"
default-features = false
features = ["gateway", "serenity", "rustls", "driver", "receive", "tungstenite", "builtin-queue"]

[dependencies.lavalink-rs]
version = "0.14.3"
default-features = false
features = ["serenity", "songbird", "tungstenite-rustls-webpki-roots"]

[dependencies.symphonia]
version = "0.5.4"
features = ["all-codecs"]

[dependencies.tokio]
version = "1.47.0"
features = ["rt-multi-thread", "macros", "signal", "fs", "process"]

[dependencies.dashmap]
version = "6.1.0"
features = ["serde"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
rpath = false
overflow-checks = false
debug-assertions = false
incremental = false
split-debuginfo = "off"

[patch.crates-io]
audiopus_sys = { path = "vendor/audiopus_sys-0.2.2" }
songbird = { path = "vendor/songbird-0.5.0"}
stream_lib = { path = "vendor/rsget/stream_lib" }
